--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,7 +3,6 @@
 
   <string name="action_example">Example action</string>
 
-  <string name="action_settings">Settings</string>
   <string name="action_change_units">Change Units</string>
   <string name="symbol_search">Symbol Search</string>
   <string name="content_test">Search for a Stock Symbol</string>
@@ -11,4 +10,9 @@
   <string name="input_prefill"></string>
   <string name="widget_title">Today\'s Market</string>
   <string name="network_toast">Uh-oh! This app requires an internet connection</string>
+  <string name="stock_exists_error">This stock is already saved!</string>
+  <string name="stock_nodata_error">This stock has no data!</string>
+  <string name="stock_not_found">Stock not found</string>
+  <string name="empy_text">No stocks added, or unable to download recent stock data</string>
+    <string name="title_activity_stock_detail">Stock details</string>
 </resources>
