--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,4 +15,5 @@
   <string name="stock_not_found">Stock not found</string>
   <string name="empy_text">No stocks added, or unable to download recent stock data</string>
     <string name="title_activity_stock_detail">Stock details</string>
+  <string name="chart_title">Stock prices last 30 days</string>
 </resources>
